# plat-smt

./: Cargo.toml  README.md  build.rs  random-prelude1.smt2  random-prelude42.smt2  scrambler  yices-smt2
.github/workflows/: deploy-playground.yml  rust.yml
benches/: bench.rs  random_sample.txt  sample_lra.txt
benches/starexec/: README.md
check_smt/: README.md
dd_plat_smt/src/: elim_nodes.rs  main.rs  padded.rs  remove_unused.rs  replace_by_child.rs  use_mutator.rs
plat-smt-web-demo/: Cargo.toml
plat-smt-web-demo/src/: lib.rs
plat-smt-web-demo/www/: README.md  index.css  index.html  index.js
src/: approx_bitset.rs  ast_solver.rs  buffered_solver.rs  collapse.rs  core-ops.rs  def_recorder.rs  egraph.rs  euf.rs  exp.rs  explain.rs  full_buf_read.rs  full_theory.rs  index.rs  intern.rs  junction.rs  lib.rs  local_error.rs  main.rs  outer_solver.rs  parser.rs  parser_core.rs  parser_fragment.rs  reuse_mem.rs  rexp.rs  slice_vec.rs  solver.rs  sort.rs  sp_insert_map.rs  theory.rs  tseitin.rs  util.rs
src/empty_theory/: empty_theory.rs  mod.rs
src/euf/: approx_bitset.rs  egraph.rs  euf.rs  euf_impl.rs  euf_trait.rs  explain.rs  mod.rs
src/lra/: bound.rs  lra.rs  lra_impl.rs  mod.rs  tableau.rs
src/parser/: incremental_parser.rs  mod.rs  parser.rs  parser_core.rs  smtlib_logic.rs
src/recorder/: definition_recorder.rs  dep_checker.rs  interpolant_recorder.rs  mod.rs  recorder.rs  slice_vec.rs
tests/: test.rs  test.smt2
tests/smt2/: and_or_next.smt2  assert_eq_same_fn.smt2  assert_eq_same_fn.stdout  assert_level_lemma.smt2  bool-op-0-arg.smt2  bool_eq.smt2  conflict_push.stdout  conflict_push2.smt2  congruence_diamond1.smt2  congruence_diamond2.smt2  congruence_diamond2.stdout  empty-fun.smt2  empty-fun.stdout  euf+lra.smt2  euf+lra.stdout  explain-large-tree.smt2  explain-large-tree.stdout  ground-conflict.smt2  interpolant-minimized1.stdout  interpolant-minimized2.smt2  interpolant10.stdout  interpolant11.smt2  interpolant11.stdout  interpolant7.smt2  interpolant7.stdout  interpolant8.stdout  interpolant9.mid_search_eq_stdout  interpolant9.stdout  ite-bool.smt2  ite_eq.stdout  let-star.smt2  let_named.stdout  minimized11.smt2  minimized12.smt2  minimized14.smt2  minimized16.smt2  minimized6.smt2  minimized7.smt2  minimized9.smt2  named-assertion.smt2  (+36 more)
tests/smt2/empty_theory/: assert-junction.smt2  assert-junction.stdout  duplicate_assumption.smt2  duplicate_assumption.stdout  echo.smt2  eq_and.smt2  ground-conflict2.smt2  interpolant-no-assump.smt2  interpolant1.smt2  interpolant2.stdout  interpolant3.smt2  interpolant3.stdout  interpolant5.smt2  interpolant_false.smt2  interpolant_false3.stdout  ite-bool.smt2  ite-bool.stdout  named-in-assertion.smt2  named-in-assertion.stdout  simple.smt2  solve-define.stdout  xor_eq.smt2  xor_eq.stdout
tests/smt2/error/: and_false_error.smt2  and_false_error.stderr  arg_let_mismatch.smt2  arg_let_mismatch.stderr  arg_mismatch.smt2  arg_mismatch.stderr  arg_mismatch2.smt2  arg_mismatch2.stderr  arg_mismatch3.smt2  arg_mismatch3.stderr  as_error.smt2  as_error.stderr  assume-interpolant-error.smt2  assume-interpolant-error.stderr  assume-interpolant-error.stdout  bad_core.smt2  (+66 more)
(+2768 files in other folders)
