[package]
name = "bat_egg_smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
batsat = { git = "https://github.com/dewert99/batsat", branch = "change_options", features = ["logging"] }
egg = {git = "https://github.com/dewert99/egg", branch = "main", default-features = false}
symbol_table = { version = "0.3.0", features = ["global"] }
hashbrown = "0.14.3"
log = { version = "0.4.20", features = [] }
internment = "0.7.4"
thiserror = "1.0.57"
either = { version = "1.10.0", default-features = false, features = ["use_std"] }
env_logger = {version = "0.10.0", optional = true}
perfect-derive = "0.1.3"
smallvec = { version = "1.13.1", features = ["union"] }

[features]
default = ["log/release_max_level_warn"]
# Add more equalities mid-search, used for testing
test_add_more_mid_search_equalities = []

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false, features = [] }
walkdir = "2.5.0"
codspeed-criterion-compat = "2.4.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true