[package]
name = "plat-smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platsat = { git = "https://github.com/dewert99/platsat", branch = "main", features = ["logging"] }
plat-egg = {git = "https://github.com/dewert99/plat-egg", branch = "main", default-features = false}
rustc-hash = {version = "1.1.0", default-features = false}
hashbrown = { version = "0.14.3" , default-features = false}
log = { version = "0.4.20", default-features = false }
thiserror-no-std = "2.0.1"
env_logger = {version = "0.10.0", optional = true}
perfect-derive = "0.1.3"
smallvec = { version = "1.13.1", features = ["union"], default-features = false }
no-std-compat = { version = "0.4.1" , features = ["alloc"]}

[features]
default = ["log/release_max_level_warn"]
# Add more equalities mid-search, used for testing
test_add_more_mid_search_equalities = []

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false, features = [] }
walkdir = "2.5.0"
codspeed-criterion-compat = "2.4.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
